--- a/services/trade_producer/Makefile
+++ b/services/trade_producer/Makefile
@@ -1,7 +1,14 @@
 run-dev:
-	poetry build -t trade_producer
-
-run:
+	copy dev.env .env 
 	poetry run python src/main.py
+
+build:
+	docker build -t trade_producer .
+
+run:build
+	docker run \
+		--network=redpanda_network \
+		--env-file prod.env \
+		trade_producer
 	
 
