--- a/services/trade_to_ohlc/Makefile
+++ b/services/trade_to_ohlc/Makefile
@@ -1,12 +1,15 @@
 run-dev:
-#	copy dev.env to .env
+	copy dev.env to .env
 	poetry run python src/main.py
 
 build:
 	docker build -t trade_to_ohlc .
 
 run: build
-	docker run trade_to_ohlc
+	docker run \
+		--network=redpanda_network \
+		--env-file prod.env \
+		trade_to_ohlc 
 
 
 
