--- a/services/trade_producer/Makefile
+++ b/services/trade_producer/Makefile
@@ -1,14 +1,24 @@
-run-dev:
-	copy dev.env .env 
+run-live-dev:
+	copy live.dev.env .env 
 	poetry run python src/main.py
+
+run-historical-dev:
+	copy historical.dev.env .env 
+	poetry run python src/main.py
+
 
 build:
 	docker build -t trade_producer .
 
-run:build
+run-live:build
 	docker run \
 		--network=redpanda_network \
-		--env-file prod.env \
+		--env-file live.prod.env \
 		trade_producer
 	
-
+run-historical:build
+	docker run \
+		--network=redpanda_network \
+		--env-file historical.prod.env \
+		trade_producer
+	
