feature(services): dockerize all services and make them run in dev and prod mode, with historical and live data

--- a/services/topic_to_feature_store/Makefile
+++ b/services/topic_to_feature_store/Makefile
@@ -1,16 +1,26 @@
-run-dev:
-	copy dev.env .env
+run-live-dev:
+	copy live.dev.env .env 
 	poetry run python src/main.py
 
-build:
-	docker build -t trade_to_ohlc .
+run-historical-dev:
+	copy historical.dev.env .env 
+	poetry run python src/main.py
 
-run: build
+
+build:
+	docker build -t topic_to_feature_store .
+
+run-live:build
 	docker run \
 		--network=redpanda_network \
-		--env-file prod.env \
-		trade_to_ohlc 
-
+		--env-file live.prod.env \
+		topic_to_feature_store
+	
+run-historical:build
+	docker run \
+		--network=redpanda_network \
+		--env-file historical.prod.env \
+		topic_to_feature_store
 
 
 
