feature(price_predict): basic system for prediction microservice

--- a/docker-compose/feature-pipeline.yml
+++ b/docker-compose/feature-pipeline.yml
@@ -2,6 +2,7 @@ name: feature-pipeline
 networks:
   redpanda_network:
     external: true
+    # name: redpanda_network in case it doesn't work
 services:
   trade_producer:
     build:
