refactor(price_predictor): restructure project for better organization and add XGBoost model

--- a/docker-compose/redpanda.yml
+++ b/docker-compose/redpanda.yml
@@ -1,4 +1,3 @@
-
 name: redpanda-owl-shop
 networks:
   redpanda_network:
@@ -14,10 +13,17 @@ services:
       - --smp 1
       - --overprovisioned
       - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
+      # Address the broker advertises to clients that connect to the Kafka API.
+      # Use the internal addresses to connect to the Redpanda brokers
+      # from inside the same Docker network.
+      # Use the external addresses to connect to the Redpanda brokers
+      # from outside the Docker network.
       - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
       - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
+      # Address the broker advertises to clients that connect to the HTTP Proxy.
       - --advertise-pandaproxy-addr internal://redpanda:8082,external://localhost:18082
       - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
+      # Redpanda brokers use the RPC API to communicate with each other internally.
       - --rpc-addr redpanda:33145
       - --advertise-rpc-addr redpanda:33145
       - --mode dev-container
@@ -26,7 +32,6 @@ services:
       - 18082:18082
       - 19092:19092
       - 19644:9644
-      - 9092:19092
     volumes:
       - redpanda:/var/lib/redpanda/data
     networks:
@@ -64,4 +69,3 @@ services:
       - redpanda_network
     depends_on:
       - redpanda
-      
