--- a/docker-compose/feature_pipeline.yml
+++ b/docker-compose/feature_pipeline.yml
@@ -12,6 +12,7 @@ services:
       - redpanda_network
     env_file:
       - ../services/trade_producer/live.prod.env
+    restart: always
 
   trade_to_ohlc:
     build:
@@ -21,6 +22,7 @@ services:
       - redpanda_network
     env_file:
       - ../services/trade_to_ohlc/live.prod.env
+    restart: always
 
   topic_to_feature_store:
     build:
@@ -31,4 +33,5 @@ services:
     env_file:
       - ../services/topic_to_feature_store/live.prod.env
       - ../services/topic_to_feature_store/credentials.env
+    restart: always
 
