--- a/services/trade_producer/historical.dev.env
+++ b/services/trade_producer/historical.dev.env
@@ -1,5 +1,5 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
 KAFKA_TOPIC=trade_historical
-PRODUCT_ID=BTC/USD
+PRODUCT_IDS=["BTC/EUR","ETH/EUR"]
 LIVE_OR_HISTORICAL=historical
-LAST_N_DAYS=60
+LAST_N_DAYS=30
