--- a/services/trade_producer/live.dev.env
+++ b/services/trade_producer/live.dev.env
@@ -1,4 +1,4 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
 KAFKA_TOPIC=trade
-PRODUCT_ID=BTC/USD
+PRODUCT_IDS=["BTC/EUR","ETH/EUR"]
 LIVE_OR_HISTORICAL=live
