--- a/services/trades/Makefile
+++ b/services/trades/Makefile
@@ -1,19 +1,29 @@
+# Run locally
 run-dev:
 	uv run python run.py
 
-build:
-	docker build -f Dockerfile -t trades .
-
+# Run with docker
 run: build
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
 		trades
 
-build-multistage:
-	docker build -f multistage.Dockerfile -t trades:multistage .
+# DOCKER
+build:
+	docker build -f Dockerfile -t trades .
 
-run-multistage: build-multistage
+docker-run: docker-build
+	docker run -it \
+		--network redpanda_network \
+		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
+		trades
+
+# MULTISTAGE BUILD METHODS
+build-multistage:
+	docker build -f multistage.Dockerfile -t trades:multistage . # TODO: optimize docker file with multistage build https://github.com/Real-World-ML/real-time-ml-system-cohort-3/blob/main/services/trades/multistage.Dockerfile
+
+run-multistage: build-multistage # TODO: optimize docker file with multistage build https://github.com/Real-World-ML/real-time-ml-system-cohort-3/blob/main/services/trades/multistage.Dockerfile
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
