feature(candles): option to emit incomplete candles
from settings.env file to configure the candles service

--- a/services/candles/settings.env
+++ b/services/candles/settings.env
@@ -3,4 +3,4 @@ KAFKA_INPUT_TOPIC=trades
 KAFKA_OUTPUT_TOPIC=candles
 KAFKA_CONSUMER_GROUP=candles_consumer_group
 CANDLE_INTERVAL_SECONDS=60
-PAIRS=["BTC/USD"]
+EMIT_INCOMPLETE_CANDLES=True
