feature(technical-indicators): add technical-indicators service
running technical-indicators service locally

--- a/services/technical-indicators/Makefile
+++ b/services/technical-indicators/Makefile
@@ -7,26 +7,26 @@ run: build
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
-		candles
+		trades
 
 # DOCKER
 build:
-	docker build -f Dockerfile -t candles .
+	docker build -f Dockerfile -t technical-indicators .
 
 docker-run: docker-build
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
-		candles
+		technical-indicators
 
 # MULTISTAGE BUILD METHODS
 build-multistage:
-	docker build -f multistage.Dockerfile -t candles:multistage . # TODO: optimize docker file with multistage build https://github.com/Real-World-ML/real-time-ml-system-cohort-3/blob/main/services/trades/multistage.Dockerfile
+	docker build -f multistage.Dockerfile -t technical-indicators:multistage . # TODO: optimize docker file with multistage build https://github.com/Real-World-ML/real-time-ml-system-cohort-3/blob/main/services/trades/multistage.Dockerfile
 
 run-multistage: build-multistage # TODO: optimize docker file with multistage build https://github.com/Real-World-ML/real-time-ml-system-cohort-3/blob/main/services/trades/multistage.Dockerfile
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
-		candles:multistage
+		technical-indicators:multistage
 
 build-all: build build-multistage
