fix(candles.py): validate candle format
all 3 services working together locally
all 3 services working together on docker containers

--- a/services/technical-indicators/Makefile
+++ b/services/technical-indicators/Makefile
@@ -7,7 +7,7 @@ run: build
 	docker run -it \
 		--network redpanda_network \
 		-e KAFKA_BROKER_ADDRESS=redpanda:9092 \
-		trades
+		technical-indicators
 
 # DOCKER
 build:
