--- a/services/technical-indicators/Dockerfile
+++ b/services/technical-indicators/Dockerfile
@@ -1,6 +1,23 @@
 # Replace the problematic line with official Python image
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS builder
 
+# Install system dependencies first
+RUN apt-get update && apt-get install -y \
+    gcc \
+    wget \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Download and install TA-Lib
+RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
+    tar -xvzf ta-lib-0.4.0-src.tar.gz && \
+    cd ta-lib/ && \
+    ./configure --prefix=/usr && \
+    make && \
+    make install && \
+    cd .. && \
+    rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
+
 # Install the project into `/app`
 WORKDIR /app
 
