--- a/services/candles/settings.env
+++ b/services/candles/settings.env
@@ -1,6 +1,7 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
 KAFKA_INPUT_TOPIC=trades
 KAFKA_OUTPUT_TOPIC=candles
-KAFKA_CONSUMER_GROUP=candles_consumer_group
+KAFKA_CONSUMER_GROUP=candles_consumer_group_3
 CANDLE_INTERVAL_SECONDS=60
+MAX_CANDLES_IN_STATE=60
 EMIT_INCOMPLETE_CANDLES=True
