--- a/services/to-feature-store/settings.env
+++ b/services/to-feature-store/settings.env
@@ -1,5 +1,7 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
-KAFKA_INPUT_TOPIC=trades
-KAFKA_CONSUMER_GROUP=to_feature_store_consumer_group
-FEATURE_GROUP_NAME=rwml_third_ed
+KAFKA_INPUT_TOPIC=technical-indicators
+KAFKA_CONSUMER_GROUP=to_feature_store_consumer_group_2
+FEATURE_GROUP_NAME=technical_indicators
 FEATURE_GROUP_VERSION=1
+FEATURE_GROUP_PRIMARY_KEYS=["pair","candle_interval_seconds"]
+FEATURE_GROUP_EVENT_TIME=timestamp_ms
