--- a/services/trades/settings.env
+++ b/services/trades/settings.env
@@ -1,3 +1,4 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
 KAFKA_TOPIC=trades
-PAIRS=["BTC/USD", "BTC/EUR", "ETH/EUR", "ETH/USD", "ETH/BTC"]
+PAIRS=["BTC/USD", "BTC/EUR", "ETH/EUR", "ETH/USD", "ETH/BTC", "SOL/USD", "XRP/USD", "DOGE/USD"]
+DATA_SOURCE=live
