--- a/services/trades/live.settings.env
+++ b/services/trades/live.settings.env
@@ -1,5 +1,4 @@
 KAFKA_BROKER_ADDRESS=localhost:19092
-KAFKA_TOPIC=trades_historical
+KAFKA_TOPIC=trades_live
 PAIRS=["BTC/USD", "BTC/EUR", "ETH/EUR", "ETH/USD", "ETH/BTC", "SOL/USD", "XRP/USD", "DOGE/USD"]
-DATA_SOURCE=historical
-LAST_N_DAYS=10
+DATA_SOURCE=live
