--- a/services/candles/live.settings.env
+++ b/services/candles/live.settings.env
@@ -3,5 +3,5 @@ KAFKA_INPUT_TOPIC=trades
 KAFKA_OUTPUT_TOPIC=candles
 KAFKA_CONSUMER_GROUP=candles_consumer_group_3
 CANDLE_INTERVAL_SECONDS=60
-MAX_CANDLES_IN_STATE=60
 EMIT_INCOMPLETE_CANDLES=True
+DATA_SOURCE=live
