--- a/docker-compose/technical-indicators-pipeline-historical.yml
+++ b/docker-compose/technical-indicators-pipeline-historical.yml
@@ -65,12 +65,13 @@ services:
       - ../services/to-feature-store/hopsworks_credentials.env
     environment:
       - KAFKA_BROKER_ADDRESS=redpanda:9092
-      - KAFKA_INPUT_TOPIC=technical-indicators_historical_${RUN_ID}KAFKA_BROKER_ADDRESS=localhost:19092
-      - KAFKA_CONSUMER_GROUP=to_feature_store_consumer_group_2
+      - KAFKA_INPUT_TOPIC=technical-indicators_historical_${RUN_ID}
+      - KAFKA_CONSUMER_GROUP=to_feature_store_consumer_group_historical_${RUN_ID}
       - FEATURE_GROUP_NAME=technical_indicators
       - FEATURE_GROUP_VERSION=2
       - FEATURE_GROUP_PRIMARY_KEYS=["pair","candle_interval_seconds"]
       - FEATURE_GROUP_EVENT_TIME=timestamp_ms
+      - FEATURE_GROUP_MATERIALIZATION_MINUTES=15
       - DATA_SOURCE=historical
     restart: on-failure
     networks:
