feature(news): add news service fetching news from cryptopanic

--- a/docker-compose/technical-indicators-pipeline-historical.yml
+++ b/docker-compose/technical-indicators-pipeline-historical.yml
@@ -35,7 +35,7 @@ services:
       - CANDLE_INTERVAL_SECONDS=60
       - EMIT_INCOMPLETE_CANDLES=False
       - DATA_SOURCE=historical
-    restart: on-failure
+    # TODO restart: on-failure // add a retry mechanism LINKED WITH THE QUIX STREAMS STATEFUL SOURCE METHOD in run.py
     networks:
       - redpanda-network
 
