--- a/services/news/pyproject.toml
+++ b/services/news/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "loguru>=0.7.3",
-    "pydantic-settings>=2.7.0",
+    "pydantic-settings>=2.6.1",
+    "quixstreams>=3.4.0",
     "requests>=2.32.3",
 ]
