--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ __pycache__/
 .credentials/
 **/hopsworks_credentials.env
 **/cryptopanic_credentials.env
-
+**credentials.env
+**/openai_credentials.env
+**/anthropic_credentials.env
 
 # State files
 state/
@@ -22,3 +24,5 @@ state/
 .DS_Store
 
 .last_run_id
+
+**/news_signal.egg-info
