feature(ollama): working with mistral and cohere rseries
timeouts are a problem, so we are using mistral and cohere rseries and not llama3.2
we must be able to handle timeouts and retries

--- a/services/news-signal/Makefile
+++ b/services/news-signal/Makefile
@@ -7,6 +7,12 @@ run-claude:
 run-ollama:
 	uv run python -m llms.ollama
 
+start-ollama:
+	ollama serve
+
+stop-ollama:
+	ollama stop
+
 build:
 	docker build -f Dockerfile -t news-signal .
 
