--- a/services/news-signal/pyproject.toml
+++ b/services/news-signal/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "pydantic>=2.10.3",
     "quixstreams>=3.4.0",
     "llama-index-llms-ollama>=0.5.0",
+    "ollama>=0.4.4",
 ]
